--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <h1 class="header-logo-wrapper">
-        <img class="header-logo" src="/img/logo.svg" alt="Grand Players" />
+        <img class="header-logo" src="./img/logo.svg" alt="Grand Players" />
       </h1>
     </header>
     <section class="hero">
