--- a/index.html
+++ b/index.html
@@ -59,75 +59,77 @@
     <section class="courses">
       <div class="courses-container">
         <h1 class="courses-main-copy">Courses</h1>
-        <div class="courses-card">
-          <div class="courses-card-left">
-            <div class="courses-card-image-box Frontman">
-              <img
-                class="courses-card-image"
-                src="./img/live.png"
-                alt="ライブ風景の写真です"
-              />
+        <div class="courses-card-wrapper">
+          <a class="courses-card">
+            <div class="courses-card-left">
+              <div class="courses-card-image-box Frontman">
+                <img
+                  class="courses-card-image"
+                  src="./img/live.png"
+                  alt="ライブ風景の写真です"
+                />
+              </div>
             </div>
-          </div>
-          <div class="courses-card-right">
-            <p class="courses-card-text-right-top">
-              フロントマンコースではコードワーク、ストロークを中心とした基礎をはじめ、魅せる動きのコツなども伝授します。講師の実際のライブ映像を本人が解説するレッスンもご用意しております。
-            </p>
-            <p class="courses-card-text-right-bottom">もっと見る</p>
-          </div>
-        </div>
-        <div class="courses-card">
-          <div class="courses-card-left">
-            <div class="courses-card-image-box Backing">
-              <img
-                class="courses-card-image"
-                src="./img/live.png"
-                alt="ライブ風景の写真です"
-              />
+            <div class="courses-card-right">
+              <p class="courses-card-text-right-top">
+                フロントマンコースではコードワーク、ストロークを中心とした基礎をはじめ、魅せる動きのコツなども伝授します。講師の実際のライブ映像を本人が解説するレッスンもご用意しております。
+              </p>
+              <p class="courses-card-text-right-bottom">もっと見る</p>
             </div>
-          </div>
-          <div class="courses-card-right">
-            <p class="courses-card-text-right-top view-more">
-              バッキングコースではコードワーク、ストロークを中心とした基礎をはじめ、バンド全体のバランスを俯瞰した音作りの手法などを伝授します。アンプの機種に応じた調整のコツから、EQを用いた本格的な調整まで取り扱っております。
-            </p>
-            <p class="courses-card-text-right-bottom">もっと見る</p>
-          </div>
-        </div>
-        <div class="courses-card">
-          <div class="courses-card-left">
-            <div class="courses-card-image-box Lead">
-              <img
-                class="courses-card-image"
-                src="./img/live.png"
-                alt="ライブ風景の写真です"
-              />
+          </a>
+          <a class="courses-card">
+            <div class="courses-card-left">
+              <div class="courses-card-image-box Backing">
+                <img
+                  class="courses-card-image"
+                  src="./img/live.png"
+                  alt="ライブ風景の写真です"
+                />
+              </div>
             </div>
-          </div>
-          <div class="courses-card-right">
-            <p class="courses-card-text-right-top">
-              リードギターコースでは、ピッキングやポジショニングといった観点で、課題となるリフを詳細に解説するレッスンを通じて、リードギターに必要な技術の習得を目指します。
-            </p>
-            <p class="courses-card-text-right-bottom">もっと見る</p>
-          </div>
-        </div>
-        <div class="courses-card">
-          <div class="courses-card-left">
-            <div class="courses-card-image-box Solo">
-              <img
-                class="courses-card-image"
-                src="./img/live.png"
-                alt="ライブ風景の写真です"
-              />
+            <div class="courses-card-right">
+              <p class="courses-card-text-right-top view-more">
+                バッキングコースではコードワーク、ストロークを中心とした基礎をはじめ、バンド全体のバランスを俯瞰した音作りの手法などを伝授します。アンプの機種に応じた調整のコツから、EQを用いた本格的な調整まで取り扱っております。
+              </p>
+              <p class="courses-card-text-right-bottom">もっと見る</p>
             </div>
-          </div>
-          <div class="courses-card-right">
-            <p class="courses-card-text-right-top">
-              ギターソロコースでは、アドリブの方法論や特殊奏法のレッスンを通して、とにかくカッコいいソロを弾くための技術を伝授します。上級者向けのコースとなります。
-            </p>
-            <p class="courses-card-text-right-bottom">もっと見る</p>
-          </div>
+          </a>
+          <a class="courses-card">
+            <div class="courses-card-left">
+              <div class="courses-card-image-box Lead">
+                <img
+                  class="courses-card-image"
+                  src="./img/live.png"
+                  alt="ライブ風景の写真です"
+                />
+              </div>
+            </div>
+            <div class="courses-card-right">
+              <p class="courses-card-text-right-top">
+                リードギターコースでは、ピッキングやポジショニングといった観点で、課題となるリフを詳細に解説するレッスンを通じて、リードギターに必要な技術の習得を目指します。
+              </p>
+              <p class="courses-card-text-right-bottom">もっと見る</p>
+            </div>
+          </a>
+          <a class="courses-card">
+            <div class="courses-card-left">
+              <div class="courses-card-image-box Solo">
+                <img
+                  class="courses-card-image"
+                  src="./img/live.png"
+                  alt="ライブ風景の写真です"
+                />
+              </div>
+            </div>
+            <div class="courses-card-right">
+              <p class="courses-card-text-right-top">
+                ギターソロコースでは、アドリブの方法論や特殊奏法のレッスンを通して、とにかくカッコいいソロを弾くための技術を伝授します。上級者向けのコースとなります。
+              </p>
+              <p class="courses-card-text-right-bottom">もっと見る</p>
+            </div>
+          </a>
         </div>
-        <div class="courses-button">
+        <a class="courses-button">
           <p class="courses-button-text">すべてのコースを見る</p>
           <div class="courses-button-image-box">
             <img
@@ -136,7 +138,7 @@
               class="courses-button-image"
             />
           </div>
-        </div>
+        </a>
       </div>
     </section>
   </body>
